sửa stream.toList()